[metadata]
name = sssimp
version = attr: sssimp.__version__
author = Tina
author_email = me@tina.moe
description = A simple static website generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tina-otoge/sssimp

[options]
packages = find:
package_dir = = src
include_package_data = true
install_requires =
	jinja2
	markdown

[options.packages.find]
where = src
