[metadata]
name = sssimp
author = Tina
author_email = me@tina.moe
description = A simple static website generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tina-otoge/sssimp
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]

[options]
packages = find:
package_dir = = src
include_package_data = true
install_requires =
	jinja2
	markdown
	python_markdown_gh_emoji @ git+https://github.com/Tina-otoge/python_markdown_github_emoji_extension
	mdx_linkify
	pyyaml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	sssimp = sssimp.__main__:main
